service circles to flexbox

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 	<section id="top" class="header">
 		<div class="maker-industries">
-			<h1><span class="maker">Maker</span> <span class="industries">Industries</span></h1>			
+			<h1><span class="maker">Maker</span> <span class="industries">Industries</span></h1>
 		</div>	
 	</section>
 
@@ -30,26 +30,28 @@
 
 		<div class="services-description">
 			<h2>We bring your creative vision to life.</h2>
-			<p>Maker Industries is a single point of contact custom fabrication shop specializing in experiential marketing campaigns. We are ready to support every phase of your project, from pitch through design, fabrication and launch.</p> 
-			 
+			<p>Maker Industries is a single point of contact custom fabrication shop specializing in experiential marketing campaigns. We are ready to support every phase of your project, from pitch through design, fabrication and launch.</p>  
 		</div>
 
 		<div class="services-circles">
-			<div class="circle pitch">
-				<img src="images/data-analytics1.svg" alt="">
-				<p>Refine ideas for pitches that pack a punch</p>
+			<div class="services-circle pitch">
+					<img src="images/data-analytics1.svg" alt="">
+					<p>Refine ideas for pitches that pack a punch</p>
 			</div>
-			<div class="circle design">
-				<img src="images/web-design4.svg" alt="">
-				<p>2D and 3D design with unparalleled attention to detail</p>
+
+			<div class="services-circle design">
+					<img src="images/web-design4.svg" alt="">
+					<p>2D and 3D design with unparalleled attention to detail</p>
 			</div>
-			<div class="circle fabrication">
-				<img src="images/hammer2.svg" alt="">
-				<p>High quality fabrication in any medium</p>
+
+			<div class="services-circle fabrication">
+					<img src="images/hammer2.svg" alt="">
+					<p>High quality fabrication in any medium</p>
 			</div>
-			<div class="circle launch">
-				<img src="images/rocket78.svg" alt="">
-				<p>On time delivery of products that will impress your clients and theirs</p>
+
+			<div class="services-circle launch">
+					<img src="images/rocket78.svg" alt="">
+					<p>On time delivery of products that will impress your clients and theirs</p>
 			</div>
 		</div>
 
