services list section

--- a/index.html
+++ b/index.html
@@ -57,49 +57,32 @@
 
 		<div class="services-list">
 
-		<!-- 	<ul class="services-row">
-				<li class="dot">CNC Cutting</li>
-				<li class="dot">3D CNC milling</li>
-				<li class="dot">Thermoforming</li>
-				<li class="dot">Laser cutting</li>
+			<ul class="services-row">
+				<li class="dotted">CNC Cutting</li>
+				<li class="dotted">3D CNC milling</li>
+				<li class="dotted">Thermoforming</li>
+				<li class="dotted">Laser cutting</li>
 				<li>3D Printing</li>
 			</ul>
 						
 			<ul class="services-row">
-				<li class="dot">Rotational molding</li>
-				<li class="dot">Arduino</li>
-				<li class="dot">Software development</li>
+				<li class="dotted">Rotational molding</li>
+				<li class="dotted">Arduino</li>
+				<li class="dotted">Software development</li>
 				<li>Circuit design</li>
 			</ul>
 
 			<ul class="services-row">
-				<li class="dot">Consultation</li>
-				<li class="dot">Research and development</li>
-				<li class="dot">3D design</li>
+				<li class="dotted">Consultation</li>
+				<li class="dotted">Research and development</li>
+				<li class="dotted">3D design</li>
 				<li>Fabrication in any medium</li>
 			</ul>
 			
 			<ul class="services-row">
 				<li>Residential and commercial space modifications</li>
-			</ul>	 -->
+			</ul>	
 
-
-			<ul class="services-row	">
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-				<li class="dotted">Service cnn</li>
-			</ul>
 		</div>
 	</section>
 
