--- a/index.html
+++ b/index.html
@@ -102,12 +102,33 @@
 	</section>
 
 	<section id = "contactSection" class = "contact">
-			<div class="contact-form">INSERT CONTACT FORM</div>
-			<div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.1364994989294!2d-79.4683534!3d43.707712300000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b33df17cb8ab3%3A0xb466a3290a5bc1ca!2s14+Eugene+St%2C+North+York%2C+ON+M6B+3Z4!5e0!3m2!1sen!2sca!4v1429060832053" frameborder="0" style="border:0"></iframe></div>
+			<div class="contact-form">
+				<form action="" method="POST" class="contactForm" autocomplete="on" name="contactForm">
+ 						<label for="name">Name</label>
+ 						<input type="text" name="name">
+
+ 						<label for="email">Email</label>
+ 						<input type="email" name="email">
+
+ 						<label for="subject">Subject</label>
+ 						<input type="text" name="subject">
+
+ 						<label for="message">Message</label>
+ 						<textarea name="message"></textarea>
+
+						<input type="submit" value="Submit">
+				</form>
+			</div> <!--  end .contact-form -->
+			<div class="map">
+				<h2>Maker Industries Headquarters</h2>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.1364994989294!2d-79.4683534!3d43.707712300000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b33df17cb8ab3%3A0xb466a3290a5bc1ca!2s14+Eugene+St%2C+North+York%2C+ON+M6B+3Z4!5e0!3m2!1sen!2sca!4v1429060832053" frameborder="0" style="border:0"></iframe>
+			</div> <!--  end .map -->
 		<div class="copyright">Copyright Maker Industries 2015</div>
-	</section>
+	</section> <!--  end .contact  -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/jquery.smooth-scroll.js"></script>
+	<script src="flickity/flickity.pkgd.min.js"></script>
 	<script>
 
 		function servicesDots(){
@@ -122,30 +143,37 @@
 			console.log('Dots finished.');
 		}
 
-		// Add dot separators between service list items
-		// (not the last one though!)
-		$(function(){
-			servicesDots();
-		});
-
 		// Correct the dot separators between service list items
 		// when page is resized
 		$(window).resize(function() {
 		    clearTimeout(window.resizedFinished);
 		    window.resizedFinished = setTimeout(function(){
-		        console.log('Resized finished.');
-		        servicesDots(); // on 
+		        servicesDots(); // on resize
+		        if ($(window).width() < 700){
+		        	$('.main-nav a').smoothScroll({offset: -140});
+		        	console.log("small screen" + $(document).width())
+		        }else{
+		        	$('.main-nav a').smoothScroll({offset: -10});
+		        	console.log("big screen" + $(document).width())
+		        }
 		    }, 250);
 		});
 
-	</script>
-	<script src="js/jquery.smooth-scroll.js"></script>
-	<script>
-		$(function() {
-			$('.main-nav a').smoothScroll();
-		});	
-	</script>
-	<script src="flickity/flickity.pkgd.min.js"></script>
+		// Add dot separators between service list items
+		// (not the last one though!)
+		$(function(){
+			servicesDots();
 
+			if ($(window).width() < 700){
+		        	$('.main-nav a').smoothScroll({offset: -140});
+		        	console.log("small screen" + $(window).width())
+		        }else{
+		        	$('.main-nav a').smoothScroll({offset: -10});
+		        	console.log("big screen" + $(window).width())
+		        }
+
+		});
+
+	</script>
 </body>
 </html>
